# 7backupper

./: .gitignore  7b.conf.example.json  README.md  backupper.py  pyproject.toml  requirements.txt  run
.github/workflows/: install-lint.yml
backupper/: configuration.py  file.py  process.py
src/backupper/: __init__.py  __main__.py  configuration.py  file.py  process.py
